<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff"
    >
	<TextView  
	    android:id="@+id/title"
	    android:text="@string/lbl_about"
	    style="@style/HeaderText"
	    />
	<ScrollView 
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		>
		<LinearLayout android:orientation="vertical"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:background="#ffffff"
		    >
		    <TableLayout 
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:stretchColumns="1"
			android:layout_marginBottom="10sp"
			>
			<TableRow>
				<TextView
					android:padding="5dp"
					android:text="@string/about_lbl_developers"
					android:textStyle="bold"
					android:textColor="#0e0e0e"
				/>
				<TextView
					android:padding="5dp"
					android:id="@+id/developers"
					android:textColor="#0e0e0e"
					android:scrollHorizontally="false"
                    android:singleLine="false"
                    android:layout_weight="1"
				/>
			</TableRow>
			<TableRow android:background="#eeeeee">
				<TextView
					android:padding="5dp"
					android:text="@string/about_lbl_tutor"
					android:textStyle="bold"
					android:textColor="#0e0e0e"
				/>
				<TextView
					android:padding="5dp"
					android:id="@+id/tutor"
					android:textColor="#0e0e0e"
					android:scrollHorizontally="false"
                    android:singleLine="false"
                    android:layout_weight="1"
				/>
			</TableRow>
			<TableRow>
				<TextView
					android:padding="5dp"
					android:text="@string/about_lbl_credits"
					android:textStyle="bold"
					android:textColor="#0e0e0e"
				/>
				<TextView
					android:padding="5dp"
					android:id="@+id/credits"
					android:textColor="#0e0e0e"
					android:scrollHorizontally="false"
                    android:singleLine="false"
                    android:layout_weight="1"
				/>
			</TableRow>
		</TableLayout>
		<TextView
				android:padding="5dp"
				android:id="@+id/content"
				android:textColor="#0e0e0e"
				android:layout_width="fill_parent"
		    	android:layout_height="wrap_content"
		    	android:text="@string/txt_about"
			/>
		<Button
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:id="@+id/help"
			android:text="@string/lbl_help"
			android:background="@drawable/selector_button_blue"
			style="@style/ButtonText"
			/>
		
		<Button
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:id="@+id/faq"
			android:text="@string/lbl_faq"
			android:background="@drawable/selector_button_blue"
			style="@style/ButtonText"
			/>
			
		<Button
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:id="@+id/mail"
			android:text="@string/lbl_mail"
			android:background="@drawable/selector_button_blue"
			style="@style/ButtonText"
			/>
			
		<Button
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:id="@+id/facebook"
			android:text="@string/lbl_facebook"
			android:background="@drawable/selector_button_blue"
			style="@style/ButtonText"
			/>
	</LinearLayout>
</ScrollView>
</LinearLayout>